@@ -38,6 +38,8 @@ Trunk (unreleased changes)
     HADOOP-6996. Allow CodecFactory to return a codec object given a codec'
     class name. (hairong)
 
+    HADOOP-7171. Support Ugi in the FileContext. (jitendra)
+
   IMPROVEMENTS
 
     HADOOP-6644. util.Shell getGROUPS_FOR_USER_COMMAND method name 
